--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # production
 /build
+/dist
+/package
+
 
 # misc
 .DS_Store
@@ -17,6 +20,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.docz
+.docz/*
+*.tgz
+package-lock.json
+yarn.lock
 
 npm-debug.log*
 yarn-debug.log*
